modifying asset path and fixing some spacing

--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -301,7 +301,7 @@ a {
   }
 
   pipeline-animator {
-  @include box($fg:1);
+  @include box($fg:1, $pos:absolute);
   }
 }
 
